--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,8 @@
 
   <body>
-    <h1>Hello, World!</h1>
+    <div class="encompass">
+      <div class="inlet">
+        <h1>Please login with your Discord ID</h1>
+      </div>
+    </div>
   </body>
