Trying to see login request in console terminal

--- a/pages/head.html
+++ b/pages/head.html
@@ -17,3 +17,11 @@
   <meta property="og:site_name" content="Psicarto" />
   <meta data-react-helmet="true" property="og:description" content="Psionic card generator by shadowsword#0179" />
   </head>
+  <body>
+  <div class="flashArray">
+    <div class="encompass">
+      <div class="inlet">
+        <p id="FlashComm"></p>
+      </div>
+    </div>
+  </div>
