--- a/pages/index.html
+++ b/pages/index.html
@@ -1,8 +1,14 @@
-
-  <body>
+  <div class="encompass">
+    <div class="orenji">
+      <h1>Psicarto</h1>
+    </div>
+  </div>
     <div class="encompass">
       <div class="inlet">
-        <h1>Please login with your Discord ID</h1>
+        <h2><aqua>Please login with your Discord ID</aqua></h2>
+        <form action="/login" method="post">
+        <orange>IDNUMBER:</orange> <input type="text" name="idnumber"><br>
+      <input type="submit" value="Request Unlock" style="background-color: #757575; color: #FFFFFF; width: 100px;">
+    </form></div>
       </div>
     </div>
-  </body>
