--- a/pages/head.html
+++ b/pages/head.html
@@ -18,10 +18,12 @@
   <meta data-react-helmet="true" property="og:description" content="Psionic card generator by shadowsword#0179" />
   </head>
   <body>
+    <!--
   <div class="flashArray">
     <div class="encompass">
-      <div class="inlet">
+      <div class="orenji">
         <p id="FlashComm"></p>
       </div>
     </div>
   </div>
+  -->
