--- a/pages/authwait.html
+++ b/pages/authwait.html
@@ -1,1 +1,16 @@
-<h1>Waiting for authorization...</h1>
+<div class="encompass">
+  <div class="orenji">
+    <h2>Enter authorization token</h2>
+  </div>
+</div>
+
+<div class="encompass">
+  <div class="inlet">
+    An authorization token has been sent to your discord. Please check your Discord DM's.<br>
+    <form action="/login" method="post">
+      <orange>KEY:</orange> <input type="text" name="key" id="key"><br>
+      <input type="submit" value="Authorize" style="background-color: #757575; color: #FFFFFF; width: 150px;">
+    </form>
+  </div>
+
+</div>
