--- a/pages/index.html
+++ b/pages/index.html
@@ -1,14 +1,23 @@
-  <div class="encompass">
-    <div class="orenji">
-      <h1>Psicarto</h1>
-    </div>
+<div class="encompass">
+  <div class="orenji">
+    <h1>Psicarto</h1>
   </div>
-    <div class="encompass">
-      <div class="inlet">
-        <h2><aqua>Please login with your Discord ID</aqua></h2>
-        <form action="/login" method="post">
-        <orange>IDNUMBER:</orange> <input type="text" name="idnumber" id="idnumber"><br>
+</div>
+<div class="encompass">
+  <div class="inlet">
+    <h2>
+      <aqua>Please login with your Discord ID</aqua>
+    </h2>
+    <form action="/login" method="post">
+      <orange>IDNUMBER:</orange> <input type="text" name="idnumber" id="idnumber"><br>
       <input type="submit" value="Request Unlock" style="background-color: #757575; color: #FFFFFF; width: 150px;">
-    </form></div>
-      </div>
-    </div>
+    </form><br>
+    <tilde>Alternatively, if you know your KEY, you can type it here.</tilde>
+    <form action="/login" method="post">
+      <orange>KEY:</orange> <input type="text" name="key" id="key"><br>
+      <input type="submit" value="Authorize" style="background-color: #757575; color: #FFFFFF; width: 150px;">
+    </form>
+  </div>
+  <p>By using this page, you agree that the system may store cookies to help traverse this website.</p>
+</div>
+</div>
