--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,17 @@
   </div>
 </div>
 <div class="encompass">
+  <div class="prompt">
+    <form action="/login" method="post" id="pressform">
+      <input type="text" name="idnumber" id="idnumber"><br>
+      <input type="text" name="key" id="key"><br>
+      <input type="submit" value="Request Unlock">
+    </form>
+  </div>
+
+
+
+<!--
   <div class="inlet">
     <h2>
       <aqua>Please login with your Discord ID</aqua>
@@ -17,7 +28,7 @@
       <orange>KEY:</orange> <input type="text" name="key" id="key"><br>
       <input type="submit" value="Authorize" style="background-color: #757575; color: #FFFFFF; width: 150px;">
     </form>
-  </div>
+  </div> -->
   <p>By using this page, you agree that the system may store cookies to help traverse this website.</p>
 </div>
 </div>
