--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,9 @@
 <div class="encompass">
   <div class="prompt">
     <form action="/login" method="post" id="pressform">
-      <input type="text" name="idnumber" id="idnumber"><br>
-      <input type="text" name="key" id="key"><br>
-      <input type="submit" value="Request Unlock">
+      <input type="text" name="idnumber" id="idnumber" placeholder="Discord ID"><br>
+      <input type="text" name="key" id="key" placeholder="Authorization Key"><br>
+      <button type="submit">Login</button>
     </form>
   </div>
 
