--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,5 @@
-<div class="encompass">
+<script type="text/javascript" src="js/combauth.js"></script>
+<div class="encompass" onload="checkLoginBox()">
   <div class="orenji">
     <h1>Psicarto</h1>
   </div>
@@ -8,13 +9,14 @@
     <form action="/login" method="post" id="pressform">
       <input type="text" name="idnumber" id="idnumber" placeholder="Discord ID"><br>
       <input type="text" name="key" id="key" placeholder="Authorization Key"><br>
-      <button type="submit">Login</button>
+      <div class="center" id="buttonControl"><button type="submit">Login</button></div>
     </form>
   </div>
 
 
 
-<!--
+
+  <!--
   <div class="inlet">
     <h2>
       <aqua>Please login with your Discord ID</aqua>
@@ -30,5 +32,4 @@
     </form>
   </div> -->
   <p>By using this page, you agree that the system may store cookies to help traverse this website.</p>
-</div>
 </div>
