--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="js/combauth.js"></script>
-<div class="encompass" onload="checkLoginBox()">
+<div class="encompass">
   <div class="orenji">
     <h1>Psicarto</h1>
   </div>
