append ID to flashArray

--- a/pages/head.html
+++ b/pages/head.html
@@ -18,7 +18,7 @@
   <meta data-react-helmet="true" property="og:description" content="Psionic card generator by shadowsword#0179" />
   </head>
   <body>
-  <div class="flashArray">
+  <div class="flashArray" id="flashArray">
     <div class="encompass">
       <div class="orenji">
         <p id="FlashComm"></p>
