--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  function chech_user() {
+  function check_user() {
     var idnum = document.getElementById("idnumber"),
     key = document.getElementById("key"),
     flashBox = document.getElementById("flashArray"),
