--- a/pages/head.html
+++ b/pages/head.html
@@ -21,7 +21,7 @@
   <div class="flashArray" id="flashArray">
     <div class="encompass">
       <div class="orenji">
-        <p id="FlashComm"></p>
+        <p id="flashComm"></p>
       </div>
     </div>
   </div>
