forgot to include message

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     console.log("Update issued")
     if (idnum.value !== null && key.value !== null) {
       flashBox.style.display = "block"
-      flashMSG.innerHTML = ""
+      flashMSG.innerHTML = "Both fields cannot be filled at the same time"
       boxCTL.style.display = "none"
     } else {
       flashBox.style.display = "none"
