extended if statements

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,13 +6,24 @@
     flashMSG = document.getElementById("flashComm"),
     boxCTL = document.getElementById("buttonControl")
     console.log("Update issued")
-    if (idnum.value !== null && key.value !== null) {
-      flashBox.style.display = "block"
-      flashMSG.innerHTML = "Both fields cannot be filled at the same time"
-      boxCTL.style.display = "none"
-    } else {
-      flashBox.style.display = "none"
-      boxCTL.style.display = "block"
+    if (idnum.value !== null && idnum.value !== undefined) {
+      if (key.value !== null && key.value !== undefined) {
+        flashBox.style.display = "block"
+        flashMSG.innerHTML = "Both fields cannot be filled at the same time"
+        boxCTL.style.display = "none"
+      } else {
+        flashBox.style.display = "none"
+        boxCTL.style.display = "block"
+      }
+    } else if (key.value !== null && key.value !== undefined) {
+      if (idnum.value !== null && idnum.value !== undefined) {
+        flashBox.style.display = "block"
+        flashMSG.innerHTML = "Both fields cannot be filled at the same time"
+        boxCTL.style.display = "none"
+      } else {
+        flashBox.style.display = "none"
+        boxCTL.style.display = "block"
+      }
     }
   }
 </script>
