--- a/pages/index.html
+++ b/pages/index.html
@@ -6,8 +6,8 @@
     flashMSG = document.getElementById("flashComm"),
     boxCTL = document.getElementById("buttonControl")
     console.log("Update issued")
-    if (idnum.value !== null && idnum.value !== undefined) {
-      if (key.value !== "") {
+    if (idnum.value.length !== 0) {
+      if (key.value.length !== 0) {
         flashBox.style.display = "block"
         flashMSG.innerHTML = "Both fields cannot be filled at the same time"
         boxCTL.style.display = "none"
@@ -15,8 +15,8 @@
         flashBox.style.display = "none"
         boxCTL.style.display = "block"
       }
-    } else if (key.value !== null && key.value !== undefined) {
-      if (idnum.value !== "") {
+    } else if (key.value.length !== 0) {
+      if (idnum.value.length !== 0) {
         flashBox.style.display = "block"
         flashMSG.innerHTML = "Both fields cannot be filled at the same time"
         boxCTL.style.display = "none"
