--- a/pages/index.html
+++ b/pages/index.html
@@ -1,32 +1,4 @@
-<script type="text/javascript">
-  function check_user() {
-    var idnum = document.getElementById("idnumber"),
-    key = document.getElementById("key"),
-    flashBox = document.getElementById("flashArray"),
-    flashMSG = document.getElementById("flashComm"),
-    boxCTL = document.getElementById("buttonControl")
-    console.log("Update issued")
-    if (idnum.value.length !== 0) {
-      if (key.value.length !== 0) {
-        flashBox.style.display = "block"
-        flashMSG.innerHTML = "Both fields cannot be filled at the same time"
-        boxCTL.style.display = "none"
-      } else {
-        flashBox.style.display = "none"
-        boxCTL.style.display = "block"
-      }
-    } else if (key.value.length !== 0) {
-      if (idnum.value.length !== 0) {
-        flashBox.style.display = "block"
-        flashMSG.innerHTML = "Both fields cannot be filled at the same time"
-        boxCTL.style.display = "none"
-      } else {
-        flashBox.style.display = "none"
-        boxCTL.style.display = "block"
-      }
-    }
-  }
-</script>
+<script type="text/javascript" src="js/logincheck.js"></script>
 
 <div class="encompass">
   <div class="orenji">
