moved flash array to bottom

--- a/pages/trail.html
+++ b/pages/trail.html
@@ -1,2 +1,7 @@
+<div class="flashArray" id="flashArray">
+    <div class="orenji">
+      <p id="flashComm"></p>
+    </div>
+</div>
   </body>
 </html>
