Committing to security

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
 </div>
 <div class="encompass">
   <div class="prompt" onload="LogUpdate()">
-    <form action="/psicarto/login" method="post" id="pressform">
+    <form action="/pc/login" method="post" id="pressform">
       <input type="text" name="idnumber" id="idnumber" onChange="check_user(this.value);" placeholder="Discord ID"><br>
       <input type="text" name="key" id="key" onChange="check_user(this.value);" placeholder="Authorization Key"><br>
       <div class="center" id="buttonControl" style="display: none;"><button type="submit">Login</button></div>
