rechecking from perma

--- a/pages/head.html
+++ b/pages/head.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Psionic card generator by shadowsword#0179">
-  <link rel="stylesheet" href="pc/css/main.css">
+  <link rel="stylesheet" href="/pc/css/main.css">
   <link rel="icon"
         type="image/ico"
-        href="pc/css/favicon.ico">
+        href="/pc/css/favicon.ico">
   <script type="text/javascript" src="js/linked.js"></script>
   <!-- PSICARTO SYSTEM 1 -->
   <meta name="author" content="shadowsword#0179" />
