--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="js/logincheck.js"></script>
+<script type="text/javascript" src="/pc/js/logincheck.js"></script>
 
 <div class="encompass">
   <div class="orenji">
