--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,9 @@
 <script type="text/javascript" src="/pc/js/logincheck.js"></script>
-
+<div class="encompass">
+  <div class="orenji">
+    <h1>Psicarto</h1>
+  </div>
+</div>
 <div class="encompass">
   <div class="prompt" onload="LogUpdate()">
     <form action="/pc/login" method="post" id="pressform">
