--- a/pages/head.html
+++ b/pages/head.html
@@ -18,9 +18,7 @@
   <meta data-react-helmet="true" property="og:description" content="Psionic card generator by shadowsword#0179" />
   </head>
   <body>
-    <div class="encompass">
-      <div class="orenji">
-        <h1>Psicarto</h1><br>
-        <a href="/">Home</a>
-      </div>
-    </div>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li style="float:right"><a class="active" href="/pc">Dashboard</a></li>
+    </ul>
