navbar in trailer

--- a/pages/trail.html
+++ b/pages/trail.html
@@ -1,7 +1,13 @@
 <div class="flashArray" id="flashArray">
-    <div class="orenji">
-      <p id="flashComm"></p>
-    </div>
+  <div class="orenji">
+    <p id="flashComm"></p>
+  </div>
 </div>
-  </body>
+  <div class="encompass">
+    <div class="inlet">
+      <a href="/">Homepage</a>
+    </div>
+  </div>
+</body>
+
 </html>
