rewrite link header

--- a/pages/trail.html
+++ b/pages/trail.html
@@ -5,7 +5,7 @@
 </div>
   <div class="encompass">
     <div class="inlet">
-      <a href="/">Homepage</a>
+      <a href="/">shadowsword.tk</a>
     </div>
   </div>
 </body>
