--- a/pages/Icheck.html
+++ b/pages/Icheck.html
@@ -2,5 +2,5 @@
   var flashBox = document.getElementById("flashArray"),
   flashMSG = document.getElementById("flashComm")
   flashBox.style.display="block"
-  flashMSG.innerHTML = "Your <tilde>Authorization Key</tilde> has been send to you via DM."
+  flashMSG.innerHTML = "Your <tilde>Authorization Key</tilde> has been sent to you via DM."
 </script>
