testing server stack to handle numbers

--- a/pages/Error.html
+++ b/pages/Error.html
@@ -2,5 +2,5 @@
   var flashBox = document.getElementById("flashArray"),
   flashMSG = document.getElementById("flashComm")
   flashBox.style.display="block"
-  flashMSG.innerHTML = "Error: Server received unexpected data"
+  flashMSG.innerHTML = "<tilde>Error:</tilde> Server received unexpected data"
 </script>
