Revision to input system

--- a/pages/Error.html
+++ b/pages/Error.html
@@ -2,5 +2,5 @@
   var flashBox = document.getElementById("flashArray"),
   flashMSG = document.getElementById("flashComm")
   flashBox.style.display="block"
-  flashMSG.innerHTML = "<tilde>Error:</tilde> Server received unexpected data"
+  flashMSG.innerHTML = "<tilde>Error:</tilde> Server received unexpected data.<br>Number ID's can be copied using Discord's developer tools, while the Authorization Key is uniquely generated for your session."
 </script>
