required PC JS link

--- a/pages/head.html
+++ b/pages/head.html
@@ -10,7 +10,7 @@
   <link rel="icon"
         type="image/ico"
         href="/pc/css/favicon.ico">
-  <script type="text/javascript" src="js/linked.js"></script>
+  <script type="text/javascript" src="/pc/js/linked.js"></script>
   <!-- PSICARTO SYSTEM 1 -->
   <meta name="author" content="shadowsword#0179" />
   <meta name="description" content="Psicarto Homepage" />
