new procedures and key check testing

--- a/pages/Error.html
+++ b/pages/Error.html
@@ -1,3 +1,4 @@
+<!-- Error.html -->
 <script type="text/javascript">
   var flashBox = document.getElementById("flashArray"),
   flashMSG = document.getElementById("flashComm")
