--- a/pages/Kcheck.html
+++ b/pages/Kcheck.html
@@ -1,6 +1,18 @@
+<!-- Kcheck.html -->
+<!--
 <script type="text/javascript">
   var flashBox = document.getElementById("flashArray"),
   flashMSG = document.getElementById("flashComm")
   flashBox.style.display="block"
   flashMSG.innerHTML = "Awaiting data block."
 </script>
+-->
+<div class="encompass">
+  <div class="inlet">
+    <h1>Login Successful</h1>
+    <div class="code">
+      <green>Transferring session...</green>
+    </div>
+  </div>
+</div>
+<!-- Insert stuff to do a 301 and cookie here -->
