--- a/pages/NoUserFound.html
+++ b/pages/NoUserFound.html
@@ -1,1 +1,2 @@
+<!-- NoUserFound.html (Bot cannot find user) -->
 <tilde><red>The bot couldn't find your User ID in any known servers.</red></tilde>
