--- a/pages/head.html
+++ b/pages/head.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- head.html -->
   <head>
   <title>Psicarto</title>
   <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
