--- a/pages/index.html
+++ b/pages/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <script type="text/javascript" src="/pc/js/logincheck.js"></script>
 <div class="encompass">
   <div class="orenji">
