--- a/pages/nokey.html
+++ b/pages/nokey.html
@@ -1,7 +1,7 @@
-<!-- check -->
+<!-- nokey.html -->
 <script type="text/javascript">
   var flashBox = document.getElementById("flashArray"),
   flashMSG = document.getElementById("flashComm")
   flashBox.style.display="block"
-  flashMSG.innerHTML = "Your <tilde>Authorization Key</tilde> has been sent to you via DM."
+  flashMSG.innerHTML = "<tilde>Error:</tilde> This Authorization Key doesn't match our database."
 </script>
