After 5 seconds Javascript will auto load

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,3 +15,8 @@
   </div>
   <p>By using this page, you agree that the system may store cookies to help traverse this website.</p>
 </div>
+<script type="text/javascript">
+  setTimeout(() => {
+    check_user()
+  }, 5000)
+</script>
