--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
       <div class="center" id="buttonControl" style="display: none;"><button type="submit">Login</button></div>
     </form>
   </div>
-  <p>By using this page, you agree that the system may store cookies to help traverse this website.</p>
+  <p><div class="code">By using this page, you agree that the system may store <yellow>cookies</yellow> to help traverse this website.</div></p>
 </div>
 <script type="text/javascript">
   setTimeout(() => {
