--- a/pages/Kcheck.html
+++ b/pages/Kcheck.html
@@ -1,12 +1,4 @@
 <!-- Kcheck.html -->
-<!--
-<script type="text/javascript">
-  var flashBox = document.getElementById("flashArray"),
-  flashMSG = document.getElementById("flashComm")
-  flashBox.style.display="block"
-  flashMSG.innerHTML = "Awaiting data block."
-</script>
--->
 <div class="encompass">
   <div class="inlet">
     <h1>Login Successful</h1>
@@ -17,5 +9,4 @@
 </div>
 </body>
 </html>
-
-<!-- Insert stuff to do a 301 and cookie here -->
+<meta http-equiv="refresh" content="5;url=/">
