Changed the way system handles directions

--- a/pages/301.html
+++ b/pages/301.html
@@ -5,28 +5,24 @@
   <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="404 Page Not Found">
+  <meta name="description" content="Please Login">
   <link rel="stylesheet" href="/pc/css/main.css">
-  <link rel="icon"
-        type="image/ico"
-        href="/pc/css/favicon.ico">
+  <meta http-equiv="refresh" content="2;url=/pc">
   <script type="text/javascript" src="/pc/js/linked.js"></script>
   <!-- PSICARTO SYSTEM 1 -->
   <meta name="author" content="shadowsword#0179" />
   <meta name="description" content="Psicarto Homepage" />
   <meta property="og:site_name" content="Psicarto" />
-  <meta data-react-helmet="true" property="og:description" content="404 Page Not Found" />
+  <meta data-react-helmet="true" property="og:description" content="Please Login" />
   </head>
   <body>
     <div class="encompass">
       <div class="inlet">
         <h1><yellow>Oh.</yellow></h1>
-        <tilde>This resource is inaccessible.</tilde>
+        <div class="code">This resource is inaccessible.<br>
+        We will automatically transfer you.</div>
       </div>
       <br>
-      <div class="orenji">
-        <a href="/">Return</a>
-      </div>
     </div>
   </body>
 </html>
